# Basic-Boids

./: .gitignore  CMakeLists.txt  readme.md
glad/include/glad/: glad.h
glad/src/: glad.c
shaders/: boids.comp  shader.frag  shader.vert
src/: main.cpp
